--- a/graveyard/index.html
+++ b/graveyard/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="../dist/index.css" rel="stylesheet">
+  <link href="../dist/onering.css" rel="stylesheet">
   <title>Document</title>
-<script src="../dist/hot-update.js" defer="defer"></script></head>
+</head>
 <body>
   
 </body>
